<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_live"
            android:checked="true"
            android:icon="@drawable/ic_timer"
            android:title="@string/live" />
        <item
            android:id="@+id/nav_item_final_time"
            android:checked="true"
            android:icon="@drawable/ic_soccer"
            android:title="@string/final_time" />
        <item
            android:id="@+id/nav_item_schedule"
            android:checked="true"
            android:icon="@drawable/ic_calendar_clock"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_item_list_league"
            android:checked="true"
            android:icon="@drawable/ic_trophy_variant_outline"
            android:title="@string/list_league" />
    </group>
</menu>