<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_default_margin"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray2"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_border_margin"
                android:background="@color/white"
                android:orientation="vertical"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/league_text_view"
                        style="@style/TextStyle.Heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        tools:text="League" />

                    <TextView
                        android:id="@+id/date_time_text_view"
                        style="@style/TextStyle.Title.Sub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        tools:text="Date Schedule Time Schedule" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/schedule_home_team_image_view"
                                android:layout_width="64dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/home_team_desc"
                                tools:src="@drawable/logo_team_1" />

                            <TextView
                                android:id="@+id/schedule_home_team_text_view"
                                style="@style/TextStyle.TextTeamName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                tools:text="@string/home_team_text_view" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal"
                            android:paddingTop="@dimen/app_padding">

                            <TextView
                                android:id="@+id/schedule_score_home_text_view"
                                style="@style/TextStyle.TextScore"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginRight="8dp"
                                android:gravity="center"
                                tools:text="@string/default_home_score" />

                            <TextView
                                android:id="@+id/schedule_score_delimiter"
                                style="@style/TextStyle.TextScore"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                tools:text="@string/score_delimiter" />

                            <TextView
                                android:id="@+id/schedule_score_away_text_view"
                                style="@style/TextStyle.TextScore"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginStart="8dp"
                                android:gravity="center"
                                tools:text="@string/default_away_score" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/schedule_away_team_image_view"
                                android:layout_width="64dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/away_team_desc"
                                tools:src="@drawable/logo_team_2" />

                            <TextView
                                android:id="@+id/schedule_away_team_text_view"
                                style="@style/TextStyle.TextTeamName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                tools:text="@string/away_team_text_view" />

                        </LinearLayout>

                    </LinearLayout>

                    <!--Uncomment if you want to show prediction on card-->
                    <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:text="@string/predict_title" />-->

                    <!--<TextView-->
                    <!--android:id="@+id/schedule_predict_result"-->
                    <!--style="@style/TextStyle.Title.Sub"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--tools:text="@string/predict_title" />-->

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>